--- a/index.html
+++ b/index.html
@@ -137,13 +137,24 @@ font-size:20px;
 }
 @media screen and (min-width : 375px; max-width: 600px){
 h7 {
-font-size:30px;
+font-size:40px;
 }
 	h4  {
-	font-size:20px;
+	font-size:30px;
 	}
 	h6 {
-	font-size:15px;
+	font-size:25px;
+	}
+}
+@media screen and (min-width : 600px){
+h7 {
+font-size:70px;
+}
+	h4  {
+	font-size:50px;
+	}
+	h6 {
+	font-size:45px;
 	}
 }
 .collapse {
