--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ margin-bottom:-100px;
 margin-right:-10px;
 }
 
-@media screen and (max-width : 375px){
+@media screen and (max-width : 374px){
 h7 {
 font-size:20px;
 }
@@ -133,6 +133,17 @@ font-size:20px;
 	}
 	h6 {
 	font-size:10px;
+	}
+}
+@media screen and (min-width : 374px){
+h7 {
+font-size:25px;
+}
+	h4  {
+	font-size:20px;
+	}
+	h6 {
+	font-size:15px;
 	}
 }
 .collapse {
