--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@ font-size:25px;
 	font-size:15px;
 	}
 }
+@media screen and (min-width : 541px){
+h7 {
+font-size:35px;
+}
+	h4  {
+	font-size:30px;
+	}
+	h6 {
+	font-size:25px;
+	}
+}
 .collapse {
 margin-right:-60px;
 }
