--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@ font-size:25px;
 	font-size:15px;
 	}
 }
-@media screen and (min-width : 541px){
+@media screen and (min-width : 541px; max-width: 1100px){
 h7 {
-font-size:35px;
+font-size:40px;
 }
 	h4  {
-	font-size:30px;
+	font-size:35px;
 	}
 	h6 {
-	font-size:25px;
+	font-size:20px;
 	}
 }
 .collapse {
