--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ font-size:20px;
 	font-size:10px;
 	}
 }
-@media screen and (min-width : 374px){
+@media screen and (min-width : 374p;max-width:540px){
 h7 {
 font-size:25px;
 }
