--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ font-size:20px;
 	font-size:10px;
 	}
 }
-@media screen and (min-width : 374p;max-width:540px){
+@media screen and (max-width:540px){
 h7 {
 font-size:25px;
 }
@@ -146,7 +146,7 @@ font-size:25px;
 	font-size:15px;
 	}
 }
-@media screen and (min-width : 541px; max-width: 1100px){
+@media screen and (max-width: 1100px){
 h7 {
 font-size:40px;
 }
